k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: obscura-messenger
  labels:
    name: obscura-messenger
    app: chat-application
