k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: obscura-messenger
  labels:
    app: backend-app
spec:
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: django
  selector:
    app: backend-app
  type: ClusterIP
