k8s/django-service.yml
apiVersion: v1
kind: Service
metadata:
  name: django-service
  namespace: obscura-messenger
  labels:
    app: django-app
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: django-app
  type: ClusterIP
