k8s/frontend-service-auto.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service-external
  namespace: obscura-messenger
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: frontend-app
